# millionlumenhomepage.art

./: .gitignore  Cargo.toml  README.md
erc721/: README.md
erc721-example/: Cargo.toml
erc721-example/src/: lib.rs
erc721/src/: lib.rs  tests.rs  types.rs
millionlumenhomepage/: Cargo.toml  init.sh
millionlumenhomepage/src/: lib.rs  test.rs  types.rs
mlh-contract/: Makefile  check.sh  init.sh  standalone.sh
mlh-contract/src/: lib.rs  test.rs  types.rs
mlh-frontend/: astro.config.mjs  contract.id  data-0x000.json  deploy-prod.sh  deploy.sh  init.sh  package-lock.json  package.json
mlh-frontend/Million/: README.md  package-lock.json  package.json
mlh-frontend/Million/src/: constants.ts  index.ts  invoke.ts
mlh-frontend/src/: keyStore.ts
mlh-frontend/src/components/: Connect.astro  Frame.astro  Mint.astro  SmallFrame.astro
mlh-frontend/src/layouts/: Layout.astro
mlh-frontend/src/pages/: fresque.png.ts  index.astro  supply.ts
mlh-frontend/src/pages/test/: [id].astro  [id].json.ts
mlh-marketplace/src/: lib.rs
src/: lib.rs  types.rs
src/erc721traits/: metadata.rs
storage/src/: lib.rs
