[workspace]
resolver = "2"
members = ["storage", "erc721", "millionlumenhomepage"]

[workspace.dependencies]
soroban-sdk = { version = "0.9.2", default-features = false }
storage = { path = "./storage" }
erc721 = { path = "./erc721" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
