[workspace]
resolver = "2"
members = ["storage", "erc721", "millionlumenhomepage"]

[workspace.dependencies]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk.git", rev = "5943aa66baf85ebb70d946c37e297abc80d13a78", default-features = false }
erc721 = { path = "./erc721", default-features = false }
storage = { path = "./storage" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
